[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/character/enemies/Trunk/Trunk.png" type="Texture" id=1]
[ext_resource path="res://assets/character/enemies/Trunk/ShootingTrunk.gd" type="Script" id=2]
[ext_resource path="res://.import/enemy_hit.ogg-b951de0110690c455495d0360968b448.oggstr" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.7
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 16, 17, 18, 19, 20, 21, 23, 24 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 31, 30, 29, 28 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.5031, 12.5122 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 92.0475, 10 )

[node name="ShootingTrunk" type="KinematicBody2D" groups=[
"enemies",
]]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 1.0069 )
texture = ExtResource( 1 )
vframes = 3
hframes = 14
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Run = SubResource( 2 )
anims/death = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.412796, 3.58473 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -100.048, 4.38507 )
shape = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -22.2316, 4.35363 )

[node name="WaitingAttack" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackCD" type="Timer" parent="."]
one_shot = true

[node name="EndingAttack" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -10.6235, 3.67705 )
enabled = true
cast_to = Vector2( 0, 13 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="WaitingAttack" to="." method="_on_WaitingAttack_timeout"]
[connection signal="timeout" from="AttackCD" to="." method="_on_AttackCD_timeout"]
[connection signal="timeout" from="EndingAttack" to="." method="_on_EndingAttack_timeout"]
